changes please change

--- a/src/App.css
+++ b/src/App.css
@@ -92,4 +92,17 @@ p {
 }
 
 
-.soundBut
+.soundButtons {
+  font-size: 15lvw;
+  background-color: var(--backGround);
+  border: none;
+}
+
+
+#graph {
+  width: 100%;
+}
+
+#graph2 {
+  width: 100%;
+}
